--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,3 +1,21 @@
 <resources>
-    <dimen name="fab_margin">16dp</dimen>
+  <!--dimensions-->
+    <dimen name="dimen_2">2dp</dimen>
+    <dimen name="dimen_4">4dp</dimen>
+    <dimen name="dimen_8">8dp</dimen>
+    <dimen name="dimen_10">10dp</dimen>
+    <dimen name="dimen_12">12dp</dimen>
+    <dimen name="dimen_16">16dp</dimen>
+    <dimen name="dimen_40">40dp</dimen>
+  <dimen name="dimen_50">50dp</dimen>
+  <dimen name="dimen_55">55dp</dimen>
+  <dimen name="dimen_60">60dp</dimen>
+    <dimen name="dimen_488">488dp</dimen>
+
+    <!--text size-->
+    <dimen name="text_size_12">12sp</dimen>
+    <dimen name="text_size_14">14sp</dimen>
+  <dimen name="text_size_16">16sp</dimen>
+  <dimen name="text_size_18">16sp</dimen>
+  <dimen name="text_size_20">20sp</dimen>
 </resources>
