--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,6 +10,7 @@
   <dimen name="dimen_50">50dp</dimen>
   <dimen name="dimen_55">55dp</dimen>
   <dimen name="dimen_60">60dp</dimen>
+  <dimen name="dimen_70">70dp</dimen>
     <dimen name="dimen_488">488dp</dimen>
 
     <!--text size-->
