--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -14,6 +14,14 @@
             android:orientation="vertical"
             android:padding="@dimen/dimen_16">
 
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tv_error"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textColor="@color/red"
+                android:textSize="@dimen/text_size_14"
+                android:visibility="gone" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/text_input_email"
@@ -28,11 +36,11 @@
                     android:id="@+id/et_email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:cursorVisible="true"
                     android:drawableStart="@drawable/ic_email"
                     android:drawablePadding="@dimen/dimen_8"
                     android:inputType="textEmailAddress"
                     android:padding="@dimen/dimen_12"
-                    android:cursorVisible="true"
                     android:textSize="@dimen/text_size_14">
 
                 </com.google.android.material.textfield.TextInputEditText>
@@ -48,18 +56,17 @@
                 android:minWidth="@dimen/dimen_488"
                 android:minHeight="@dimen/dimen_50"
                 app:passwordToggleEnabled="true"
-
                 app:passwordToggleTint="@color/black">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/et_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:cursorVisible="true"
                     android:drawableStart="@drawable/ic_lock"
                     android:drawablePadding="@dimen/dimen_8"
                     android:inputType="textPassword"
                     android:padding="@dimen/dimen_12"
-                    android:cursorVisible="true"
 
                     android:textSize="@dimen/text_size_14">
 
@@ -83,17 +90,22 @@
                 android:id="@+id/btn_signup"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/signup"
-                android:textSize="@dimen/text_size_14"
-                android:textStyle="bold"
                 android:layout_marginTop="@dimen/dimen_10"
                 android:minWidth="@dimen/dimen_488"
-                android:minHeight="@dimen/dimen_55">
+                android:minHeight="@dimen/dimen_55"
+                android:text="@string/signup"
+                android:textSize="@dimen/text_size_14"
+                android:textStyle="bold">
 
             </com.google.android.material.button.MaterialButton>
 
-
-
+            <ProgressBar
+                android:id="@+id/progress_bar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="@dimen/dimen_10"
+                android:visibility="gone" />
         </androidx.appcompat.widget.LinearLayoutCompat>
     </androidx.core.widget.NestedScrollView>
 </layout>
