--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -14,6 +14,10 @@
         <action
             android:id="@+id/action_login_fragment_to_register_fragment"
             app:destination="@id/registerFragment" />
+
+        <action
+            android:id="@+id/action_login_fragment_to_home_fragment"
+            app:destination="@id/homeFragment" />
     </fragment>
     <fragment
         android:id="@+id/registerFragment"
@@ -25,4 +29,17 @@
             android:id="@+id/action_register_fragment_to_login_fragment"
             app:destination="@id/loginFragment" />
     </fragment>
+
+    <fragment
+        android:id="@+id/homeFragment"
+        android:name="com.pocket.invoiceapp.home.HomeFragment"
+        android:label="@string/home_fragment_label"
+        tools:layout="@layout/fragment_home">
+        <action
+            android:id="@+id/action_home_fragment_to_login_fragment"
+            app:destination="@id/loginFragment" />
+
+    </fragment>
+
+
 </navigation>
