--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+    <data>
+        <import type="android.view.View">
+
+        </import>
+        <variable
+            name="isSubmitButtonEnabled"
+            type="Boolean" />
+    </data>
+
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -81,6 +90,8 @@
                 android:minWidth="@dimen/dimen_488"
                 android:minHeight="@dimen/dimen_55"
                 android:text="@string/submit"
+                android:clickable="@{isSubmitButtonEnabled}"
+                android:alpha="@{isSubmitButtonEnabled ? 1.0f : 0.5f }"
                 android:textSize="@dimen/text_size_14"
                 android:textStyle="bold">
 
